--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    //testImplementation platform('org.junit:junit-bom:5.9.1')
+    //testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.testng:testng:7.8.0'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
-    testImplementation 'log4j:log4j:3.0.0-alpha1'
-
+    //testImplementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.10.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 }
 
 test {
