--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,30 @@ repositories {
 }
 
 dependencies {
-    //testImplementation platform('org.junit:junit-bom:5.9.1')
-    //testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.testng:testng:7.8.0'
     //testImplementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.10.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.1.1'
+
 }
 
 test {
-    //useJUnitPlatform()
     useTestNG()
+}
+//task greet{
+//    doLast{
+//        print 'hello gradle'
+//    }
+//}
+task runWebTasks(type:Test){
+    outputs.upToDateWhen {false}    //run this task anew everytime
+    useTestNG{
+        useDefaultListeners true
+        outputDirectory = file("$buildDir/web-reports")
+    }
+}
+tasks.withType(Test){
+    systemProperties System.properties
 }
