--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id "io.qameta.allure" version "2.8.1"
+
 }
 
 group = 'org.example'
@@ -7,8 +9,14 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
-
+configurations {
+    compileClasspath
+    testCompile {
+        extendsFrom testImplementation
+    }
+}
 dependencies {
     testImplementation 'org.testng:testng:7.8.0'
     //testImplementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
@@ -16,6 +24,18 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.1.1'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    implementation('org.projectlombok:lombok:1.18.20')
+    annotationProcessor('org.projectlombok:lombok:1.18.20')
+    testImplementation('org.projectlombok:lombok:1.18.20')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation group: 'io.qameta.allure', name: 'allure-gradle', version: '2.8.0'
+    implementation('io.qameta.allure:allure-java-commons:2.23.0')
+    implementation('io.qameta.allure:allure-testng:2.23.0')
+    implementation 'org.aspectj:aspectjweaver:1.9.8.RC3'
 
 }
 
@@ -37,3 +57,30 @@ task runWebTasks(type:Test){
 tasks.withType(Test){
     systemProperties System.properties
 }
+
+allure {                      //configure our reports
+    version = '2.13.2'
+    autoconfigure = true
+    aspectjweaver = true
+    allureJavaVersion = '2.13.2'
+    reportDir = new File(project.projectDir as File, '/allure-report/ui')
+    resultsDir = new File(project.projectDir as File, '/allure-report/results')
+    clean = true
+}
+
+task createReportDir(){
+    doLast{
+        def file=new File(project.projectDir as File,'/allure-report/ui')
+        if(!file.exists()){
+            file.mkdirs();
+        }
+    }
+}
+task saveHistory(type:Copy){
+    from new File(project.projectDir as File,'/allure-report/ui/history')
+    into new File(project.projectDir as File,'/allure-report/results/history')
+}
+
+tasks.runWebTasks.dependsOn 'clean', 'build', 'createReportDir'
+tasks.build.mustRunAfter 'clean'
+tasks.runWebTasks.finalizedBy('allureReport')
